@@ -1,7 +1,6 @@
 -server
 -XX:+UseContainerSupport
 -XX:+UseG1GC
--XX:+UseGCOverheadLimit
 -XX:InitialRAMPercentage=50.0
 -XX:MaxRAMPercentage=75.0
 -XX:+ExplicitGCInvokesConcurrent
@@ -17,4 +16,10 @@
 -Dcom.sun.management.jmxremote.authenticate=false
 -Dcom.sun.management.jmxremote.port=10000
 -Dcom.sun.management.jmxremote.rmi.port=10000
+-Dfile.encoding=UTF-8
 -Djava.rmi.server.hostname=127.0.0.1
+# Reduce starvation of threads by GClocker, recommend to set about the number of cpu cores (JDK-8192647)
+-XX:+UnlockDiagnosticVMOptions
+-XX:GCLockerRetryAllocationCount=8
+# Allow loading dynamic agent used by JOL
+-XX:+EnableDynamicAgentLoading
